--- a/frame/core/BeautifulReport/template.html
+++ b/frame/core/BeautifulReport/template.html
@@ -7182,7 +7182,7 @@
     var resultData = ${resultData};
 
     function details(obj) {
-        if ($(obj).text() == '详情') {
+        if ($(obj).text() == '日志') {
             var len = $(obj).parent().parent().children().length;
             var detailLog = "";
             var logs = resultData["testResult"][parseInt($(obj).attr("buttonIndex"))]["log"];
@@ -7192,16 +7192,16 @@
             $.each(logs, function (i, n) {
                 detailLog = detailLog + "<p>" + n + "</p>";
             });
-            $(obj).parent().parent().after("<tr id='详情'><td colspan='" + len + "'><div style='font-family: Consolas;font-size:13px'>" + detailLog + "</div></td></tr>");
+            $(obj).parent().parent().after("<tr id='日志'><td colspan='" + len + "'><div style='font-family: Consolas;font-size:13px'>" + detailLog + "</div></td></tr>");
         } else if ($(obj).text() == '收缩') {
             var data = $(obj).parent().parent().nextAll();
             $.each(data, function (i, item) {
-                if (item.getAttribute('id') == '详情') {
+                if (item.getAttribute('id') == '日志') {
                     item.remove();
                     return false;
                 }
             })
-            $(obj).text("详情");
+            $(obj).text("日志");
             $(obj).removeClass("btn-danger");
             $(obj).addClass("btn-primary");
         }
@@ -7298,7 +7298,7 @@
                         "<td>" + n["methodName"] + "</td>" +
                         "<td>" + n["description"] + "</td>" +
                         "<td>" + n["spendTime"] + "</td>" +
-                        status + "<td><button type='button' onclick='details(this)' buttonIndex='" + i + "' class='btn btn-primary btn-xs' style='margin-bottom: 0px; margin-left:5px; margin-top:5px'>详情</button>"
+                        status + "<td><button type='button' onclick='details(this)' buttonIndex='" + i + "' class='btn btn-primary btn-xs' style='margin-bottom: 0px; margin-left:5px; margin-top:5px'>日志</button>"
 
                     if (n.hasOwnProperty("image") && n["image"].length > 0) {
                         tr += "<button type='button' onclick='details2(this)' buttonIndex='" + i + "' class='btn btn-primary btn-xs' style='margin-bottom: 0px; margin-left:5px; margin-top:5px'>截图</button>"
