调整模板样式

--- a/frame/core/BeautifulReport/template.html
+++ b/frame/core/BeautifulReport/template.html
@@ -7058,7 +7058,7 @@
                 </div>
                 <div class="ibox-content" style="display: block;" id="BGHZ1">
                     <div class="row">
-                        <div class="col-sm-6 b-r" style="height:350px">
+                        <div class="col-sm-6 b-r" style="height:300px">
                             <form class="form-horizontal">
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">报告简述:</label>
@@ -7099,7 +7099,7 @@
                             </form>
                         </div>
                         <div class="col-sm-6">
-                            <div style="height:350px" id="echarts-map-chart"></div>
+                            <div style="height:300px" id="echarts-map-chart"></div>
                         </div>
                     </div>
                 </div>
@@ -7149,13 +7149,13 @@
                     <table class="table table-bordered">
                         <thead>
                         <tr>
-                            <th>编号</th>
-                            <th>测试类</th>
+                            <th style="width: 80px">编号</th>
+                            <th style="width: 200px">测试类</th>
                             <th>测试方法</th>
                             <th>用例描述</th>
-                            <th>运行时长</th>
-                            <th>结果</th>
-                            <th>操作</th>
+                            <th style="width: 140px">运行时长</th>
+                            <th style="width: 80px">结果</th>
+                            <th style="width: 110px">操作</th>
                         </tr>
                         </thead>
                         <tbody id="detailBody">
